# birthdays-ig

./: .gitignore  Cargo.toml  README.md  history.txt
src/: commands.rs  common.rs  main.rs  structs.rs
src/commands/: append.rs  delete.rs  export.rs  fetch.rs  field.rs  format.rs  help.rs  import.rs  list.rs  quiz.rs  wish.rs  zodiac.rs
src/structs/: chatbot.rs  command.rs  person.rs
