[package]
name = "birthday_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
rand = "0.8.5"
rustyline = "10.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.92"
